# trojanzoo_sphinx_theme

./: .buildinfo  .gitattributes  .gitignore  Gruntfile.js  MANIFEST.in  README.md  changelog.html  configuring.html  genindex.html  index.html  installing.html  objects.inv  package.json  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  trojanzoo_sphinx_theme.py
.github/workflows/: demo.yml  gh-pages.yml  release.yml
_sources/: index.rst.txt  installing.rst.txt
_sources/demo/: demo.rst.txt  structure.rst.txt
demo/: api.html  demo.html  lists_tables.html  long.html  structure.html
docs/: Makefile  conf.py  configuring.rst  make.bat
docs/source/: conf.py  configuring.rst  index.rst  linkcode.py
docs/source/_templates/: image_variables.jinja  theme_variables.jinja
docs/source/demo/: demo.rst  lists_tables.rst  structure.rst
js/: _utilities.js  highlight-navigation.js  main-menu-dropdown.js  mobile-toc.js  pytorch-anchors.js  scroll-to-anchor.js  side-menus.js  theme.js  trojanzoo-anchors.js
trojanzoo_sphinx_theme/: __init__.py  breadcrumbs.html  footer.html  image_variables.jinja  layout.html  linkcode.py  search.html  searchbox.html  theme.conf  theme_variables.jinja  version.py  versions.html
trojanzoo_sphinx_theme/static/css/: theme.css
trojanzoo_sphinx_theme/static/js/: theme.js
