[metadata]
name = trojanzoo_sphinx_theme
version = attr:trojanzoo_sphinx_theme.__version__
description = TrojanZoo Sphinx Theme
url = https://github.com/ain-soph/trojanzoo_sphinx_theme
docs_url = https://github.com/ain-soph/trojanzoo_sphinx_theme
author = Ren Pang
author_email = rbp5354@psu.edu
license = GPL-3
classifier =
  Environment :: Web Environment
  Framework :: Sphinx :: Theme
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Topic :: Documentation
  Topic :: Internet
  Topic :: Software Development :: Documentation

[bdist_wheel]
universal = 1

[options]
zip_safe = False
include_package_data = True
packages = trojanzoo_sphinx_theme
install_requires =
  sphinx>=4.0.2
python_requires = >3

[options.package_data]
trojanzoo_sphinx_theme = 
  theme.conf
  *.html
  static/css/*.css
  static/js/*.js
  static/fonts/*.*
  static/images/*.*
  theme_variables.jinja

[options.entry_points]
sphinx.html_themes =
    trojanzoo_sphinx_theme = trojanzoo_sphinx_theme